--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,14 @@ FetchContent_Declare(SFML
     GIT_TAG 2.6.x)
 FetchContent_MakeAvailable(SFML)
 
-add_executable(CMakeSFMLProject src/main.cpp)
-target_link_libraries(CMakeSFMLProject PRIVATE sfml-graphics)
+add_executable(CMakeSFMLProject
+    src/main.cpp
+    src/player.cpp
+    src/scene/Component.cpp
+    src/scene/Entity.cpp
+    src/scene/components/Transform.cpp
+)
+target_link_libraries(CMakeSFMLProject PRIVATE sfml-graphics sfml-window sfml-system)
 target_compile_features(CMakeSFMLProject PRIVATE cxx_std_17)
 
 if(WIN32)
