Added a Platform class - not used yet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,14 @@ FetchContent_Declare(SFML
     GIT_TAG 2.6.x)
 FetchContent_MakeAvailable(SFML)
 
-add_executable(CMakeSFMLProject src/main.cpp)
+add_executable(CMakeSFMLProject
+    src/main.cpp
+    src/game.cpp
+    src/platform.cpp
+    src/player.cpp
+    src/scene/Component.cpp
+    src/scene/Entity.cpp
+)
 target_link_libraries(CMakeSFMLProject PRIVATE sfml-graphics)
 target_compile_features(CMakeSFMLProject PRIVATE cxx_std_17)
 
