Update for the menu
Running the menu in main for testing, planning on implementing this in the menu class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,8 @@ FetchContent_Declare(SFML
     GIT_REPOSITORY https://github.com/SFML/SFML.git
     GIT_TAG 2.6.x)
 FetchContent_MakeAvailable(SFML)
-
+#file copy
+file(COPY data/tuffy.ttf DESTINATION ${CMAKE_BINARY_DIR}/data)
 add_executable(Platformer2D
     src/main.cpp
     src/player.cpp
